# ppt2video

./: .gitignore  pyproject.toml
pptvideo/: __init__.py  convertor.py  entry.py
tests/: test_pptvideo.py
